# src/apis/controllers/project.controller.js
@@ -4,6 +4,8 @@ const {
   getAllProjects,
   getProjectByNftAddress,
   getProjectsByOwner,
+  getProjectByGuild,
+  getProjectByPlan,
   updateProject,
   deleteProject,
 } = require("../services/project.service");
@@ -21,6 +23,7 @@ const {
  * @param {Array(string)} messages
  * @param {string} website
  * @param {string} facebook
+ * @param {string} twitter
  * @param {string} discordInviteLink
  * @param {string} etherscan
  */
@@ -34,13 +37,136 @@ const addNewProject = catchAsync(async (req, res) => {
     projectName,
     totalSupply,
     symbol,
+    roles,
+    messages,
+    website,
+    facebook,
+    twitter,
+    discordInviteLink,
+    etherscan,
+    planId,
   } = req.body;
+  const result = await createNewProject(
+    nftAddress,
+    ownerDiscordId,
+    discordGuildId,
+    ownerWalletAddress,
+    projectName,
+    totalSupply,
+    symbol,
+    roles,
+    messages,
+    website,
+    facebook,
+    twitter,
+    discordInviteLink,
+    etherscan,
+    planId
+  ).catch((e) => res.status(403).json({ result: "OK", message: e.message }));
+  res.status(201).json({
+    result: "OK",
+    data: result,
+  });
 });
-const getProjects = catchAsync(async (req, res) => {});
-const getProjectByNft = catchAsync(async (req, res) => {});
+
+const getProjects = catchAsync(async (req, res) => {
+  const results = await getAllProjects().catch((e) =>
+    res.status(403).json({
+      result: "Error",
+      message: e.message,
+    })
+  );
+  res.status(200).json({
+    result: "OK",
+    data: results,
+  });
+});
+
+const getProjectByNft = catchAsync(async (req, res) => {
+  const { nftAddress } = req.params;
+  const result = await getProjectByNftAddress(nftAddress).catch((e) =>
+    res.status(403).json({
+      result: "Error",
+      message: e.message,
+    })
+  );
+
+  res.status(200).json({
+    result: "OK",
+    data: result,
+  });
+});
+
+const getProjectsByOwnerId = catchAsync(async (req, res) => {
+  const { ownerDiscordId } = req.params;
+  const results = await getProjectsByOwner(ownerDiscordId).catch((e) =>
+    res.status(403).json({
+      result: "Error",
+      message: e.message,
+    })
+  );
+  res.status(200).json({
+    result: "OK",
+    data: results,
+  });
+});
+
+const getProjectByGuildId = catchAsync(async (req, res) => {
+  const { discordGuildId } = req.params;
+  const results = await getProjectByGuild(discordGuildId).catch((e) =>
+    res.status(403).json({
+      result: "OK",
+      message: e.message,
+    })
+  );
+  res.status(200).json({
+    result: "OK",
+    data: results,
+  });
+});
+
+const getProjectByPlanId = catchAsync(async (req, res) => {
+  const { planId } = req.params;
+  const results = await getProjectByPlan(planId).catch((e) =>
+    res.status(403).json({
+      result: "OK",
+      message: e.message,
+    })
+  );
+  res.status(200).json({
+    result: "OK",
+    data: results,
+  });
+});
+
+const updateProjectByGuildId = catchAsync(async (req, res) => {
+  const { discordGuildId } = req.params;
+  const data = req.body;
+  await updateProject(discordGuildId, data).catch((e) =>
+    res.status(403).json({ result: "Error", message: e.message })
+  );
+  res.status(200).json({
+    result: "OK",
+  });
+});
+
+const deleteProjectByGuildId = catchAsync(async (req, res) => {
+  const { discordGuildId } = req.params;
+  await deleteProject(discordGuildId).catch((e) =>
+    res.status(403).json({ result: "Error", message: e.message })
+  );
+  res.status(200).json({
+    result: "OK",
+  });
+});
 
 module.exports = {
   addNewProject,
   getProjects,
   getProjectByNft,
+  getProjectsByOwnerId,
+  getProjectByGuildId,
+  getProjectByPlanId,
+  updateProjectByGuildId,
+  deleteProjectByGuildId,
 };
