# src/apis/routers/v1/holder.routes.js
@@ -1,0 +1,26 @@
+const express = require("express");
+const {
+  newHolder,
+  holder,
+  allHolders,
+  allHoldersByNft,
+  updateHolderById,
+  updateVerify,
+  updateBalance,
+  deleteHolderById,
+} = require("../../controllers/holder.controller");
+
+const router = express.Router();
+
+//@NON: Project routes
+
+router.get("/", allHolders);
+router.get("/:nftAddress", allHoldersByNft);
+router.get("/:nftAddress/:discordId", holder);
+router.put("/:nftAddress/:discordId", updateHolderById);
+router.delete("/:nftAddress/:discordId", deleteHolderById);
+router.post("/new", newHolder);
+router.put("/verify/:nftAddress/:discordId", updateVerify);
+router.put("/balance/:nftAddress/:discordId", updateBalance);
+
+module.exports = router;
