# src/apis/routers/v1/project.routes.js
@@ -1,8 +1,10 @@
 const express = require("express");
-const {} = require("../../controllers/project.controller");
+const { getProjects } = require("../../controllers/project.controller");
 
 const router = express.Router();
 
 //@NON: Project routes
+
+router.get("/", getProjects);
 
 module.exports = router;
